<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ribbit</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="button_label_sign_up">SIGN UP</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="button_label_login">SIGN IN</string>
    <string name="textview_label_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="error_title">Error</string>
    <string name="error_message_sign_up">Please enter a valid username, password and email address!</string>
    <string name="error_message_login">Please enter a valid username and password!</string>
    <string name="fragment_title_1">Inbox</string>
    <string name="fragment_title_2">Friends</string>
    <string name="empty_message_inbox">No new messages!</string>
    <string name="empty_message_friends">Add friends to begin!</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="action_done">Done</string>
    <string name="action_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage!</string>
    <string name="error_failed_directory">Failed to create directory</string>
    <string name="error_file">Error with the file.</string>
    <string name="error_file_size">Video file is too large!  Please choose another video.</string>

    <string-array name="camera_options">
        <item>"Take Photo</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="action_send">Send</string>
    <string name="error_file_message">There is an error with your file.  Please select another file.</string>
    <string name="error_message_send">There was a problem sending your message.  Please try again.</string>
    <string name="title_activity_image_viewer">Ribbit</string>
    <string name="hello_world">Hello world!</string>
    <string name="background_image_description">Ribbit application background image</string>
    <string name="subtitle">a TY project</string>
    <string name="button_label_cancel">CANCEL</string>

</resources>
