<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.travis.ribbit.SignUpActivity"
    style="@style/AuthBackground">

    <ImageView
        android:id="@+id/imageViewBackground"
        style="@style/AuthBackgroundImage"/>

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/AuthTitle"/>

    <TextView
        android:id="@+id/textViewSubtitle"
        style="@style/AuthSubtitle" />

    <LinearLayout
        android:id="@+id/layoutCredentials"
        style="@style/AuthFieldContainer">

        <EditText
            android:id="@+id/editTextUsername"
            android:hint="@string/hint_username"
            style="@style/AuthEditText">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/editTextPassword"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            style="@style/AuthEditText" />

        <EditText
            android:id="@+id/editTextEmail"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            style="@style/AuthEditText" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageViewDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutCredentials"
        android:layout_centerHorizontal="true"
        android:src="@drawable/button_divider"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:text="@string/button_label_sign_up"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@id/imageViewDivider"
        android:layout_marginRight="0dp"
        style="@style/AuthButton" />

    <Button
        android:id="@+id/buttonCancel"
        android:text="@string/button_label_cancel"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/imageViewDivider"
        android:layout_marginLeft="0dp"
        style="@style/AuthButton" />

</RelativeLayout>
